// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`a1.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

function foo(x: number): string { return 5; }

foo(0);

module.exports = foo;

=====================================output=====================================
// @flow

function foo(x: number): string {
  return 5;
}

foo(0);

module.exports = foo;

================================================================================
`;

exports[`a2.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

const foo = require('./a1');

module.exports = foo("");

=====================================output=====================================
// @flow

const foo = require("./a1");

module.exports = foo("");

================================================================================
`;

exports[`a3.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

const five = require('./a2');

(five + five: string);

=====================================output=====================================
// @flow

const five = require("./a2");

(five + five: string);

================================================================================
`;

exports[`b0.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

class C { x: C; }
class E { x: C; }

module.exports = { C, E };

=====================================output=====================================
// @flow

class C {
  x: C;
}
class E {
  x: C;
}

module.exports = { C, E };

================================================================================
`;

exports[`b1.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

import { C, E } from "./b0";
function foo() { return C; }
function bar() { return E; }
let X = foo();
class F extends X { }
class D extends F { }
module.exports = { C, D };

=====================================output=====================================
// @flow

import { C, E } from "./b0";
function foo() {
  return C;
}
function bar() {
  return E;
}
let X = foo();
class F extends X {}
class D extends F {}
module.exports = { C, D };

================================================================================
`;

exports[`b2.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

module.exports = require("./b1");

=====================================output=====================================
// @flow

module.exports = require("./b1");

================================================================================
`;

exports[`b3.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

import { C, D } from "./b2";

(new D: C);

=====================================output=====================================
// @flow

import { C, D } from "./b2";

(new D(): C);

================================================================================
`;

exports[`c1.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

export function foo(props: { x: number }) { }

=====================================output=====================================
// @flow

export function foo(props: { x: number }) {}

================================================================================
`;

exports[`c2.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

import { foo } from "./c1";

export function bar(props: { x: number }) {
  foo({ x: 0 });
}

=====================================output=====================================
// @flow

import { foo } from "./c1";

export function bar(props: { x: number }) {
  foo({ x: 0 });
}

================================================================================
`;

exports[`c3.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

import { bar } from "./c2";

bar({ x: 0 });

=====================================output=====================================
// @flow

import { bar } from "./c2";

bar({ x: 0 });

================================================================================
`;

exports[`d1.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

export class A {}
export class B {}
export var x = new A;

=====================================output=====================================
// @flow

export class A {}
export class B {}
export var x = new A();

================================================================================
`;

exports[`d2.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

import {A, x} from "./d1";
export var y: A = x;

=====================================output=====================================
// @flow

import { A, x } from "./d1";
export var y: A = x;

================================================================================
`;

exports[`e1.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

export type Action =
  | { type: 'FOO' }
  | { type: 'BAR' }
;

export const LIFE = 42;

=====================================output=====================================
// @flow

export type Action = { type: "FOO" } | { type: "BAR" };

export const LIFE = 42;

================================================================================
`;

exports[`e2.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

import type { Action } from './e1';

const f = (): Action => {
  return { type: 'FOO' };
}

import { LIFE } from './e1';

(LIFE: 42);

=====================================output=====================================
// @flow

import type { Action } from "./e1";

const f = (): Action => {
  return { type: "FOO" };
};

import { LIFE } from "./e1";

(LIFE: 42);

================================================================================
`;

exports[`f1.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

type T = { x: number };
type S = { x: string };

declare var a: T;
declare var b: S;
declare var c: T;

module.exports = { a, b, c };

=====================================output=====================================
// @flow

type T = { x: number };
type S = { x: string };

declare var a: T;
declare var b: S;
declare var c: T;

module.exports = { a, b, c };

================================================================================
`;

exports[`f2.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

var { a, b, c } = require('./f1');
(c: { x: number });

=====================================output=====================================
// @flow

var { a, b, c } = require("./f1");
(c: { x: number });

================================================================================
`;

exports[`g1.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

export class C { }

=====================================output=====================================
// @flow

export class C {}

================================================================================
`;

exports[`g2.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

import { C } from './g1';

class D extends C { }

module.exports = { D };

=====================================output=====================================
// @flow

import { C } from "./g1";

class D extends C {}

module.exports = { D };

================================================================================
`;

exports[`g3.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

import { C } from './g1';
import { D } from './g2';

(new D: C)

=====================================output=====================================
// @flow

import { C } from "./g1";
import { D } from "./g2";

(new D(): C);

================================================================================
`;

exports[`h1.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

export type Foo = number;

=====================================output=====================================
// @flow

export type Foo = number;

================================================================================
`;

exports[`h2.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

import type { Foo } from './h1';

=====================================output=====================================
// @flow

import type { Foo } from "./h1";

================================================================================
`;

exports[`i1.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

const foo: { p: number } = { p: 0 };

module.exports = foo;

=====================================output=====================================
// @flow

const foo: { p: number } = { p: 0 };

module.exports = foo;

================================================================================
`;

exports[`i2.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

const foo = require('./i1');

foo.p = 0;

=====================================output=====================================
// @flow

const foo = require("./i1");

foo.p = 0;

================================================================================
`;

exports[`j1.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

const foo: { [string]: number } = {};

module.exports = foo;

=====================================output=====================================
// @flow

const foo: { [string]: number } = {};

module.exports = foo;

================================================================================
`;

exports[`j2.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

const foo = require('./j1');

foo.p = 0;

=====================================output=====================================
// @flow

const foo = require("./j1");

foo.p = 0;

================================================================================
`;

exports[`k.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/* @flow */

=====================================output=====================================
/* @flow */

================================================================================
`;
